fixed init links bottom pos on mobile

--- a/index.scss
+++ b/index.scss
@@ -153,7 +153,7 @@ iframe {
       @media (max-width: 481px) {
         top: unset;
         left: 6vw;
-        bottom: 25vh;
+        bottom: 25%;
       }
     }
     &.documents {
@@ -162,7 +162,7 @@ iframe {
       @media (max-width: 481px) {
         top: unset;
         left: 6vw;
-        bottom: 17.5vh;
+        bottom: 17.5%;
       }
     }
     &.institute {
@@ -172,7 +172,7 @@ iframe {
         top: unset;
         right: unset;
         left: 6vw;
-        bottom: 10vh;
+        bottom: 10%;
       }
     }
     &.participants {
@@ -182,7 +182,7 @@ iframe {
         top: unset;
         right: unset;
         left: 6vw;
-        bottom: 2.5vh;
+        bottom: 2.5%;
       }
     }
   }
